--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   
   # QR code generation
   qr_flutter: ^4.1.0
+  
+  # Responsive framework for landing page
+  responsive_framework: ^1.5.1
 
 dev_dependencies:
   flutter_test:
