Updated .gitignore to include Flutter/Dart build artifacts and IDE files. Modified pubspec.yaml to reference updated versions of network module dependencies. Added launch configuration for different Flutter environments in .vscode/launch.json. This commit enhances project organization and development workflow.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
-# build/
+build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
@@ -30,3 +30,19 @@ env_test.sh
 
 .flutter-plugins
 .flutter-plugins-dependencies
+
+# Flutter/Dart build artifacts
+*.dill
+*.dill.track.dill
+*.cache.dill.track.dill
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+
+# macOS
+.DS_Store
+
+# Backup files
+*.backup.*
